# Workshop

./: .gitignore  CLAUDE.md  _TODO_.md  pyproject.toml  random_scatter.ipynb
.claude/: settings.json
.claude/agents/: alpha.md  mail-clerk.md  task-helper.md
.claude/output-styles/: alpha.md
.claude/skills/books/: SKILL.md  reading_profile.md
.claude/skills/jupyter/: SKILL.md  conventions.md
.claude/skills/morning-mail/: SKILL.md  preferences.md
.claude/skills/self-reflection/: SKILL.md  history.md
archive/misc_box_1/: Claude_Code_snoop_1.json  Claude_Code_snoop_2.json  Claude_Code_system_prompt.md  First-AICC-Session-No-Pic.jsonl  Opus_4.5_System_Prompt_dec_7_2025.md  tweakcc-system-prompts
log/: 2025-12-05 (Fri).md  2025-12-06 (Sat).md
lore/: curiosities.md  git-identity.md  notebook_rules.md
memno/: README.md  pyproject.toml
memno/src/memno/: __init__.py  dispatcher.py  hook.py
memno/src/memno/instructions/: __init__.py  dispatcher.md
memno/tests/: test_hook.py
projects/Alpha-Memory-Restoration/: .gitignore  main.py  pyproject.toml
projects/Alpha-Memory-Restoration/scripts/: restore_memories.py
projects/Alpha_Experiments/notebook_edit_test/: test_notebook.ipynb
projects/Beta/: README.md  first_test_output.txt
projects/Idle_Hands/: README.md
projects/Lil_Transformy/: 08_stacked.ipynb  09_multihead.ipynb  10_moe.ipynb  README.md  compare_models.ipynb  pyproject.toml  requirements.txt
projects/North_Pole/: README.md
projects/Pondside/: README.md
projects/Presearch/: README.md
projects/Simorgh/: README.md  draft.md
(+14 files in other folders)
