[project]
name = "memno"
version = "0.1.0"
description = "Memory-aware preprocessing for Claude Code hooks"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ollama>=0.4.0",
    "pendulum>=3.1.0",
    "requests>=2.31.0",
]

[project.scripts]
memno = "memno.hook:main"
memno-dispatcher = "memno.dispatcher:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/memno"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
